--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -7,6 +7,13 @@
   margin-top: 60px;
 }
 
+table, th, td {
+  border: none;
+  padding: 0.5em;
+  margin: 0 auto;
+  text-align: left;
+}
+
 img {
   height: 100px;
 }
