--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url('assets/pie-bg.png');
+  background-image: url("assets/pie-bg.png");
   background-color: linen;
   display: flex;
   justify-content: center;
@@ -23,9 +23,9 @@ body {
 
 #app {
   background-color: honeydew;
-  box-shadow: 1px 1px 10px slategray;
+  box-shadow: 0px 0px 5px #262626;
   border-radius: 25px;
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -36,7 +36,9 @@ body {
   margin: 1rem;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: none;
   padding: 0.5em;
   margin: 0 auto;
@@ -44,35 +46,52 @@ table, th, td {
 }
 
 img {
-  height: 130px;
+  height: 300px;
 }
 
 .user {
   display: inline-block;
   width: 130px;
   height: 130px;
+  margin-top: 20px;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  box-shadow: 0px 0px 6px black;
 }
 
 select {
-  width: 250px;
+  width: 160px;
+  height: 28px;
   padding: 0.6em;
   font-size: 1em;
+  margin-right: 5px;
 }
 
 button,
 input {
-  padding: 0.6em;
-  font-size: 1em;
+  padding: 0.3em;
+  font-size: 0.9em;
+  border-radius: 5px;
+  background-color: #f9c002;
 }
 
+select:focus {
+  outline: 3px solid orange;
+}
+
+button:focus {
+  outline: 3px solid orange;
+}
 .warningText {
-  color: #FF3D3D;
+  color: #ff3d3d;
 }
 
 .highlighted {
   font-weight: bold;
+}
+
+h1 {
+  font-size: 1.5em;
 }
